--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-preset-next": "^1.4.0",
     "next": "12.1.6",
+    "node-sass": "^7.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
@@ -21,6 +22,7 @@
     "cross-env": "^7.0.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "sass": "^1.53.0",
     "styled-components": "^5.3.5"
   }
 }
