--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.6",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
